# sprefa

./: .gitattributes  .gitignore  BOARD.md  Cargo.toml  EXAMPLES.sprf  PLAN.md  README.md  readme-old.md  self_check.sprf  sprefa-rules.json  sprefa-rules.schema.json  sprefa-rules.sprf  sprefa.toml
.cargo/: config.toml
chat_log/: 20260324.0.sprefa-scaffold-rules-engine.md  20260324.1.sprefa-rule-engine.md  20260324.2.sprefa-scan-pipeline-plan.md  20260324.3.sprefa-js-extractor-e2e.md  20260324.4.sprefa-js-extractor-e2e.md  20260325.0.sprefa-architecture-flush-urtsl.md  20260325.1.sprefa-index-cache-crate-split.md  20260325.2.sprefa-incremental-scan-skip.md  20260325.3.sprefa-scan-daemon-cli-wiring.md  20260326.0.sprefa-oxc-resolver-watcher-rules-memo.md  20260326.1.sprefa-daemon-rust-rewriter-structured-logging.md  20260326.2.sprefa-edge-tests-watcher-fix-super-plan.md  20260326.3.sprefa-db-sync-super-resolution.md  20260327.0.sprefa-wt-tracking-live-test-fixes.md  20260327.1.sprefa-wt-tracking-session-1-2.md  20260328.0.sprefa-schema-migration-plan.md  20260328.1.sprefa-schema-migration-session1-complete.md  20260328.2.sprefa-schema-cleanup-actionkind-removal.md  20260328.3.sprefa-graph-model-extract-context.md  20260328.4.sprefa-unified-select-chain-8-rules.md  20260328.5.sprefa-e2e-tests-query-alignment.md  20260328.6.sprefa-session4-watcher-pipeline-sql-cmd.md  20260328.7.sprefa-session4-sql-cmd-cleanup-docs.md  20260328.8.sprefa-engine-walkthrough-link-rules.md  20260329.0.sprefa-stable-ids-match-links-rule-rename.md  20260329.1.sprefa-match-links-generic-link-rules.md  20260329.2.sprefa-incremental-scan-diff-ghcache.md  20260329.3.sprefa-roadmap-dsl-ghcache.md  20260329.4.sprefa-roadmap-complete.md  20260330.0.sprefa-ast-grep-rules-disk.md  20260330.1.sprefa-tests-sccache-cleanup.md  20260330.2.repo-refs-file-predicates.md  20260330.3.sprefa-scan-order-fix-datalog-discussion.md  20260330.4.sprefa-public-push-datalog-dsl-design.md  20260330.5.sprefa-sprf-language-design.md  20260330.6.sprefa-sprf-tree-selector-language.md  20260331.0.sprefa-sprf-lang-ast-grep-unification.md  (+58 more)
crates/3_scan/: Cargo.toml
crates/4_server/: Cargo.toml
crates/4_server/src/: lib.rs
crates/5_cli/: Cargo.toml
crates/cache/: Cargo.toml
crates/cache/src/: discovery.rs  flush.rs  lib.rs  match_links.rs  meta.rs  resolve.rs  scan_context.rs  sqlite_store.rs  store.rs  tags.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/index/: Cargo.toml
crates/index/src/: extract.rs  files.rs  lib.rs  normalize.rs
crates/index/src/snapshots/: sprefa_index__normalize__tests__normalize2_one_suffix.snap  sprefa_index__normalize__tests__normalize2_strip.snap  sprefa_index__normalize__tests__normalize_basic.snap
crates/js/: Cargo.toml
crates/js/src/: lib.rs
crates/js/src/snapshots/: sprefa_js__tests__default_imports.snap  sprefa_js__tests__export_alias.snap  sprefa_js__tests__exports.snap  sprefa_js__tests__import_alias.snap  sprefa_js__tests__named_imports.snap  sprefa_js__tests__namespace_import.snap  sprefa_js__tests__reexport_rename.snap  sprefa_js__tests__reexports.snap  sprefa_js__tests__require_calls.snap
crates/query/: Cargo.toml
crates/query/src/: 0_types.rs  1_eval.rs  2_standing.rs  lib.rs
crates/query/tests/: query_e2e.rs
crates/rules/: Cargo.toml
crates/rules/src/: ast.rs  emit.rs  extractor.rs  file_match.rs  git_match.rs  graph.rs  lib.rs  link_compile.rs  marker.rs  md.rs  pattern.rs  query.rs  schema.rs  types.rs  walk.rs
crates/rules/src/snapshots/: sprefa_rules__extractor__tests__extractor_json_deps.snap  sprefa_rules__extractor__tests__extractor_yaml_deploy.snap  sprefa_rules__extractor__tests__extractor_yaml_helm.snap
crates/rules/tests/: rules_test.rs
crates/rules/tests/snapshots/: rules_test__ast_selector.snap  rules_test__cross_lockfile_dep_names.snap  rules_test__emit_helm_images.snap  rules_test__emit_package_lock_deps.snap  rules_test__emit_pnpm_lock_deps.snap  rules_test__full_rule.snap  rules_test__full_rule_with_captures.snap  rules_test__minimal_rule.snap  rules_test__multi_rule_set.snap  rules_test__rule_cargo_workspace_members.snap  rules_test__rule_deploy_values.snap  rules_test__rule_docker_compose_services.snap  rules_test__rule_helm_values.snap  rules_test__rule_k8s_configmap_envs.snap  rules_test__rule_openapi_operations.snap  rules_test__rule_package_json_exports.snap  rules_test__rule_pnpm_workspace.snap  rules_test__rule_schema.snap  rules_test__rule_tsconfig_paths.snap  rules_test__struct_selector_chain.snap  rules_test__tsp_cargo_deps.snap  rules_test__tsp_package_exports.snap  rules_test__tsp_pnpm_lock_mixed.snap  rules_test__tsp_pnpm_lock_scoped.snap  rules_test__tsp_workspace_deps.snap  rules_test__walk_dep_name_version_pairs.snap  rules_test__walk_dep_names.snap  rules_test__walk_depth_filter.snap  rules_test__walk_helm_image_refs.snap
crates/scan/: Cargo.toml  build.rs
crates/scan/src/: lib.rs  scanner.rs
crates/scan/src/snapshots/: sprefa_scan__normalize__tests__normalize2_one_suffix.snap  sprefa_scan__normalize__tests__normalize2_strip.snap  sprefa_scan__normalize__tests__normalize_basic.snap
crates/scan/tests/: discovery_e2e.rs  extraction_e2e.rs  sprf_meta_e2e.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs  migrations.rs  queries.rs  rule_tables.rs  types.rs  udfs.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/sprf/: Cargo.toml
crates/sprf-lsp/: Cargo.toml
crates/sprf-lsp/src/: main.rs
crates/sprf/src/: _0_ast.rs  _1_parse.rs  _2_pattern.rs  _3_lower.rs  hash.rs  lib.rs
crates/sprf/tests/: kitchen_sink.rs
crates/sprf/tests/fixtures/: Dockerfile  cargo.toml  config.json  data.json  deploy.yaml  go.mod  go.sum  kitchen_sink.sprf  package-lock.json  package.json  requirements.txt  values.yaml
crates/watch/: Cargo.toml
crates/watch/src/: change.rs  diff.rs  js_path.rs  lib.rs  plan.rs  queries.rs  rewrite.rs  rs_path.rs  watcher.rs  workspace.rs
crates/watch/tests/: 0_live_rename.rs  1_wt_tracking.rs  2_full_pipeline.rs
docs/: architecture-decisions.md  (+13 more)
(+50 files in other folders)
