[workspace]
members = [
    "crates/config",
    "crates/schema",
    "crates/extract",
    "crates/scan",
    "crates/server",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# async
tokio = { version = "1", features = ["full"] }

# http
axum = "0.8"

# cli
clap = { version = "4", features = ["derive"] }

# glob matching
globset = "0.4"

# error handling
anyhow = "1"
thiserror = "2"

# testing
insta = { version = "1", features = ["yaml"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
