[workspace]
members = [
    "crates/config",
    "crates/schema",
    "crates/extract",
    "crates/index",
    "crates/cache",
    "crates/scan",
    "crates/server",
    "crates/cli",
    "crates/rules",
    "crates/js",
    "crates/rs",
    "crates/watch",
    "crates/sprf",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# async
tokio = { version = "1", features = ["full"] }

# http
axum = "0.8"

# cli
clap = { version = "4", features = ["derive"] }

# glob matching
globset = "0.4"

# parallel iteration
rayon = "1"

# directory traversal
walkdir = "2"

# fast non-crypto hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# memory-mapped file I/O
memmap2 = "0.9"

# error handling
anyhow = "1"
thiserror = "2"

# json schema generation
schemars = "0.8"

# regex
regex = "1"

# JS/TS module resolution (tsconfig paths, node_modules, extension probing)
oxc_resolver = "11"

# rust parser
syn = { version = "2", features = ["full"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

# filesystem watcher
notify = "8"

# testing
insta = { version = "1", features = ["yaml"] }
tempfile = "3"

# git library
git2 = { version = "0.19", default-features = false }

# http client (CLI daemon delegation, no TLS needed for localhost)
reqwest = { version = "0.12", default-features = false, features = ["json"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
