[package]
name = "sprefa-scan"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa-config = { path = "../0_config" }
sprefa-schema = { path = "../1_schema" }
sprefa-extract = { path = "../2_extract" }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
