[package]
name = "sprefa_scan"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_config = { path = "../0_config" }
sprefa_schema = { path = "../1_schema" }
sprefa_extract = { path = "../2_extract" }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
