[package]
name = "sprefa_cache"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_config = { path = "../config" }
sprefa_schema = { path = "../schema" }
sprefa_index = { path = "../index" }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
oxc_resolver = { workspace = true }

[dev-dependencies]
sprefa_extract = { path = "../extract" }
insta = { workspace = true }
tempfile = { workspace = true }
