[package]
name = "sprefa"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sprefa"
path = "src/main.rs"

[dependencies]
sprefa_config = { path = "../config" }
sprefa_schema = { path = "../schema" }
sprefa_scan = { path = "../scan" }
sprefa_rules = { path = "../rules" }
sprefa_js = { path = "../js" }
sprefa_server = { path = "../server" }
clap = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
