[package]
name = "sprefa_query"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_schema = { path = "../schema" }
sqlx = { workspace = true }
anyhow = { workspace = true }
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sprefa_extract = { path = "../extract" }
sprefa_scan = { path = "../scan" }
sprefa_rules = { path = "../rules" }
sprefa_js = { path = "../js" }
sprefa_rs = { path = "../rs" }
sprefa_config = { path = "../config" }
tempfile = { workspace = true }
sqlx = { workspace = true }
