[package]
name = "sprefa_rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
schemars = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
sprefa_schema = { path = "../schema" }
sprefa_extract = { path = "../extract" }

[dev-dependencies]
insta = { workspace = true }
