[package]
name = "sprefa_rules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
schemars = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
sprefa_schema = { path = "../schema" }
sprefa_extract = { path = "../extract" }
ast-grep-core = "0.42"
ast-grep-language = "0.42"
ast-grep-config = "0.42"

[dev-dependencies]
insta = { workspace = true }
