[package]
name = "sprefa_scan"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_config = { path = "../config" }
sprefa_schema = { path = "../schema" }
sprefa_extract = { path = "../extract" }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
xxhash-rust = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
