[package]
name = "sprefa_scan"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_config = { path = "../config" }
sprefa_extract = { path = "../extract" }
sprefa_index = { path = "../index" }
sprefa_cache = { path = "../cache" }
sqlx = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
sprefa_schema = { path = "../schema" }
sprefa_rules = { path = "../rules" }
sprefa_js = { path = "../js" }
sprefa_rs = { path = "../rs" }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sqlx = { workspace = true }
