[package]
name = "sprefa_schema"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libsqlite3-sys = "0.30"
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true }
