[package]
name = "sprefa_server"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_config = { path = "../config" }
sprefa_schema = { path = "../schema" }
axum = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
