[package]
name = "sprefa_server"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_cache = { path = "../cache" }
sprefa_config = { path = "../config" }
sprefa_schema = { path = "../schema" }
sprefa_scan = { path = "../scan" }
axum = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
