[package]
name = "sprefa_sprf"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
winnow = "0.7"
anyhow = { workspace = true }
sprefa_rules = { path = "../rules" }
serde_json = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
