[package]
name = "sprefa_watch"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_extract = { path = "../extract" }
sprefa_schema = { path = "../schema" }
sqlx = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
