[package]
name = "sprefa_watch"
version.workspace = true
edition.workspace = true

[dependencies]
sprefa_extract = { path = "../extract" }
sprefa_cache = { path = "../cache" }
sprefa_schema = { path = "../schema" }
sqlx = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
xxhash-rust = { workspace = true }
memmap2 = { workspace = true }
toml = { workspace = true }
glob = "0.3"
sha1 = "0.10"

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
sprefa_js = { path = "../js" }
sprefa_rs = { path = "../rs" }
sprefa_cache = { path = "../cache" }
sprefa_scan = { path = "../scan" }
sprefa_config = { path = "../config" }
